# engram

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  OpenMemory.upstream.lock.json  README.md  artifact_audit.py  artifact_cli.py  artifact_gc.py  artifact_migrate.py  artifacts.py  db.py  db_bootstrap.py  db_migrate.py  docker-compose.unified.yml  identity_sync.py  kv.py  logbook_cli.py  logbook_cli_main.py  openmemory_patches.json  pyproject.toml  requirements-dev.txt  requirements.txt  scm_materialize_patch_blob.py  scm_repo.py  scm_sync_gitlab_commits.py  scm_sync_gitlab_mrs.py  scm_sync_reaper.py  scm_sync_runner.py  scm_sync_scheduler.py  scm_sync_status.py  scm_sync_svn.py  scm_sync_worker.py
.github/: CODEOWNERS  pull_request_template.md
apps/step1_logbook_postgres/scripts/: README.md  artifact_audit.py  artifact_bench.py  artifact_cli.py  artifact_gc.py  artifact_migrate.py  artifacts.py  backfill_chunking_version.py  backfill_evidence_uri.py  db.py  db_bootstrap.py  db_migrate.py  identity_resolve.py  identity_sync.py  kv.py  logbook_cli.py  pyproject.toml  render_views.py  requirements.txt  scm_integrity_check.py  scm_materialize_patch_blob.py  scm_repo.py  scm_sync_gitlab_commits.py  scm_sync_gitlab_mrs.py  scm_sync_gitlab_reviews.py  scm_sync_reaper.py  scm_sync_runner.py  scm_sync_scheduler.py  scm_sync_status.py  scm_sync_svn.py  scm_sync_worker.py  step1_cli.py
apps/step1_logbook_postgres/scripts/ci/: run_tests.sh
apps/step1_logbook_postgres/scripts/engram_step1/: __init__.py  artifact_store.py  backfill_chunking_version.py  backfill_evidence_uri.py  config.py  cursor.py  db.py  errors.py  gitlab_client.py  governance.py  hashing.py  io.py  migrate.py  outbox.py  schema_context.py  scm_auth.py  scm_sync_errors.py  scm_sync_job_types.py  scm_sync_keys.py  scm_sync_lock.py  scm_sync_policy.py  scm_sync_queue.py  source_id.py  uri.py  views.py
apps/step1_logbook_postgres/scripts/engram_step1/cli/: __init__.py  db_migrate.py
apps/step1_logbook_postgres/scripts/ops/: apply_lifecycle.sh  generate_policy.sh  generate_s3_policy.py  minio_audit_webhook.json  minio_bucket_policy.json  run_artifact_audit_cron.sh  run_artifact_migration_playbook.sh  s3_hardening.sh
apps/step1_logbook_postgres/scripts/tests/: __init__.py  conftest.py  test_artifact_audit.py  test_artifact_gc.py  test_artifact_migrate.py  test_artifact_store_object_mock.py  test_artifact_store_security.py  test_artifacts_cli.py  test_contract_shape.py  test_cursor_overlap.py  test_db_dsn_priority.py  test_evidence_refs_schema.py  test_gitlab_client_integration.py  test_gitlab_commit_cursor_tie_break.py  test_gitlab_commits_windowed_incremental.py  test_gitlab_http_client.py  test_gitlab_review_dedup.py  test_governance_settings_concurrent.py  test_identity_sync.py  test_migrate_concurrent.py  test_object_store_minio_integration.py  test_outbox_lease.py  test_patch_blob_storage_policy.py  test_redact_sensitive.py  test_schema_conventions.py  test_schema_prefix_migrate.py  test_scm_path_spec.py  test_scm_sync_degradation_policy.py  test_scm_sync_error_budget.py  test_scm_sync_keys.py  test_scm_sync_lock.py  test_scm_sync_queue.py  test_scm_sync_reaper.py  test_scm_sync_runner.py  test_scm_sync_scheduler_policy.py  test_scm_sync_status.py  test_scm_sync_worker.py  test_step1_role_permissions.py  test_step1_smoke.py  test_strict_mode_cursor_advance.py  (+5 more)
apps/step2_openmemory_gateway/gateway/: Dockerfile  README.md  pyproject.toml  requirements.dev.txt  requirements.runtime.txt  requirements.txt
apps/step2_openmemory_gateway/gateway/gateway/: __init__.py  config.py  main.py  mcp_rpc.py  outbox_worker.py  policy.py  reconcile_outbox.py  step1_adapter.py  step1_db.py
apps/step2_openmemory_gateway/gateway/tests/: conftest.py  test_actor_user_id.py  test_dsn_priority.py  test_error_codes.py  test_main_dedup.py  test_mcp_jsonrpc_contract.py  test_memory_card.py  test_migrate_import.py  test_outbox_worker.py  test_outbox_worker_integration.py  test_policy.py  test_reconcile_outbox.py  test_step1_db.py  test_unified_stack_integration.py
compose/: gateway.yml  logbook.yml  openmemory.yml  step1.yml
configs/: acceptance_workflow_coverage.json  ci_test_isolation_allowlist.json  import_migration_map.json  iteration_gate_profiles.v1.json  iteration_gate_profiles.v2.json  iteration_toolchain_drift_map.v1.json  iteration_toolchain_drift_map.v2.json  mypy_strict_island_candidates.json
docker/: engram.Dockerfile  openmemory.Dockerfile
docs/: README.md  installation.md
logbook_postgres/: README.md
schemas/: acceptance_workflow_coverage_v1.schema.json  acceptance_workflow_coverage_v2.schema.json  audit_event_v1.schema.json  audit_event_v2.schema.json  ci_test_isolation_allowlist_v1.schema.json  ci_test_isolation_allowlist_v2.schema.json  cursor_mcp_config_template_v1.schema.json  cursor_mcp_config_template_v2.schema.json  gateway_deps_db_allowlist_v1.schema.json  gateway_deps_db_allowlist_v2.schema.json  import_migration_map_v2.schema.json  iteration_evidence_v1.schema.json  iteration_evidence_v2.schema.json  iteration_gate_profiles_v1.schema.json  iteration_gate_profiles_v2.schema.json  iteration_toolchain_drift_map_v1.schema.json  iteration_toolchain_drift_map_v2.schema.json  mcp_jsonrpc_error_v1.schema.json  mcp_jsonrpc_error_v2.schema.json  mypy_strict_island_candidates_v1.schema.json  mypy_strict_island_candidates_v2.schema.json  no_root_wrappers_allowlist_v1.schema.json  no_root_wrappers_allowlist_v2.schema.json  object_store_audit_event_v1.schema.json  object_store_audit_event_v2.schema.json  openmemory_patches.schema.json  openmemory_upstream_lock.schema.json  reliability_report_v1.schema.json  reliability_report_v2.schema.json  scm_sync_job_payload_v1.schema.json  scm_sync_job_payload_v2.schema.json  scm_sync_result_v1.schema.json  scm_sync_result_v2.schema.json  scm_sync_run_v1.schema.json  scm_sync_run_v2.schema.json  unified_stack_verify_results_v1.schema.json  unified_stack_verify_results_v2.schema.json  workflow_contract_drift_report_v1.schema.json  (+1 more)
(+846 files in other folders)
