[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.1.0"
description = "AI 友好的事实账本与记忆管理模块 - Logbook + MCP Gateway"
authors = [{ name = "engram" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

# 核心依赖（Logbook 模块）
dependencies = [
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
# Gateway 模块依赖
gateway = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]
# SCM 同步功能依赖
scm = [
    "requests>=2.28.0",
    "typer>=0.9.0",
]
# 完整安装（包含所有功能）
full = [
    "engram[gateway,scm]",
]
# 开发依赖
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "jsonschema>=4.18.0",
    "requests-mock>=1.11.0",
]

[project.scripts]
# Logbook CLI
engram-logbook = "engram.logbook.cli.logbook:main"
# SCM CLI（需要 scm 依赖）
engram-scm = "engram.logbook.cli.scm:main"
# 数据库迁移
engram-migrate = "engram.logbook.cli.db_migrate:main"
# Gateway（需要 gateway 依赖）
engram-gateway = "engram.gateway.main:main"

[project.urls]
Homepage = "https://github.com/onlyfeng/engram"
Documentation = "https://github.com/onlyfeng/engram#readme"
Repository = "https://github.com/onlyfeng/engram"

[tool.setuptools.packages.find]
where = ["src"]
include = ["engram*"]

[tool.setuptools.package-data]
engram = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--durations=20"
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
