[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.1.0"
description = "AI 友好的事实账本与记忆管理模块 - Logbook + MCP Gateway"
authors = [{ name = "engram" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

# 核心依赖（Logbook 模块）
dependencies = [
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
# Gateway 模块依赖
gateway = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]
# SCM 同步功能依赖
scm = [
    "requests>=2.28.0",
    "typer>=0.9.0",
]
# 完整安装（包含所有功能）
full = [
    "engram[gateway,scm]",
]
# 开发依赖
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "jsonschema>=4.18.0",
    "requests-mock>=1.11.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    # 类型桩（与 requirements-dev.txt 保持同步）
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0.0",
    "boto3-stubs[s3]>=1.28.0",
    "types-psycopg2>=2.9.0",
]

[project.scripts]
# Logbook CLI
engram-logbook = "engram.logbook.cli.logbook:main"
# Artifacts CLI（独立入口，等价于 engram-logbook artifacts ...）
engram-artifacts = "engram.logbook.cli.artifacts:main"
# SCM CLI（需要 scm 依赖）
engram-scm = "engram.logbook.cli.scm:main"
# 数据库迁移
engram-migrate = "engram.logbook.cli.db_migrate:main"
# 数据库 bootstrap（服务账号创建与预检）
engram-bootstrap-roles = "engram.logbook.cli.db_bootstrap:main"
# Gateway（需要 gateway 依赖）
engram-gateway = "engram.gateway.main:main"
# Iteration tools
engram-iteration = "engram.iteration.cli:main"
# SCM Sync 子系统（统一入口）
engram-scm-sync = "engram.logbook.cli.scm_sync:main"
# SCM Sync 子命令快捷入口
engram-scm-scheduler = "engram.logbook.cli.scm_sync:scheduler_main"
engram-scm-worker = "engram.logbook.cli.scm_sync:worker_main"
engram-scm-reaper = "engram.logbook.cli.scm_sync:reaper_main"
engram-scm-status = "engram.logbook.cli.scm_sync:status_main"
engram-scm-runner = "engram.logbook.cli.scm_sync:runner_main"

[project.urls]
Homepage = "https://github.com/onlyfeng/engram"
Documentation = "https://github.com/onlyfeng/engram#readme"
Repository = "https://github.com/onlyfeng/engram"

[tool.setuptools.packages.find]
where = ["src"]
include = ["engram*"]

[tool.setuptools.package-data]
engram = ["py.typed"]
engram_logbook = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--durations=20"
# pythonpath 配置：确保 pytest 能正确解析 scripts.ci.* 命名空间导入
# 参见 docs/dev/ci_test_isolation.md
pythonpath = ["."]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 测试文件中允许延迟导入（避免导入错误影响所有测试）
"tests/**/*.py" = ["E402"]
# 源码中某些文件因历史原因需要延迟导入
"src/engram/logbook/db.py" = ["E402"]
"src/engram/logbook/scm_auth.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

# ============================================================
# Engram mypy 扩展配置
# ============================================================
# strict_island_paths: 严格类型检查的核心模块列表（CI 阻断）
# 这些路径必须在 [[tool.mypy.overrides]] 中有对应配置
# 约束: strict_island_paths ⊆ mypy_strict_overrides
# ============================================================
[tool.engram.mypy]
strict_island_paths = [
    # Gateway 核心模块（DI 相关）- P0
    "src/engram/gateway/di.py",
    "src/engram/gateway/container.py",
    "src/engram/gateway/services/",
    # Logbook 核心配置模块 - P0
    "src/engram/logbook/config.py",
    "src/engram/logbook/uri.py",
    # Gateway handlers/policy/audit - P1
    "src/engram/gateway/handlers/",
    "src/engram/gateway/policy.py",
    "src/engram/gateway/audit_event.py",
    # Logbook cursor/governance/outbox - P2
    "src/engram/logbook/cursor.py",
    "src/engram/logbook/governance.py",
    "src/engram/logbook/outbox.py",
    # Logbook db/views/artifact_gc - P3
    "src/engram/logbook/db.py",
    "src/engram/logbook/views.py",
    "src/engram/logbook/artifact_gc.py",
]

# ============================================================
# mypy 模块级 overrides
# ============================================================
# 每个 strict_island_paths 中的模块必须在此配置:
# - disallow_untyped_defs = true
# - ignore_missing_imports = false
# ============================================================

# --- Gateway P0: DI 核心 ---
[[tool.mypy.overrides]]
module = "engram.gateway.di"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.gateway.container"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.gateway.services.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

# --- Logbook P0: 核心配置 ---
[[tool.mypy.overrides]]
module = "engram.logbook.config"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.logbook.uri"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

# --- Gateway P1: handlers/policy/audit ---
[[tool.mypy.overrides]]
module = "engram.gateway.handlers.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.gateway.policy"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.gateway.audit_event"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

# --- Logbook P2: cursor/governance/outbox ---
[[tool.mypy.overrides]]
module = "engram.logbook.cursor"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.logbook.governance"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.logbook.outbox"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

# --- Logbook P3: db/views/artifact_gc ---
[[tool.mypy.overrides]]
module = "engram.logbook.db"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.logbook.views"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "engram.logbook.artifact_gc"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false
warn_return_any = true
