[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram_step1"
version = "0.1.0"
description = "Step1 Logbook 工具包 - 用于与 Step1 Logbook PostgreSQL 数据库交互"
authors = [{ name = "engram" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engram_step1*"]

# 包含顶层 SCM 数据库操作模块，使其可被 scm_sync_* 脚本直接 import
# 这避免了在各脚本中使用 sys.path 注入
[tool.setuptools]
py-modules = ["db"]

[tool.setuptools.package-data]
engram_step1 = ["py.typed"]
