# Memory Gateway - 桥接 Step1 Logbook 与 OpenMemory 的 API 网关
#
# ========== 开发环境配置 ==========
#
# 前置依赖:
#   Gateway 依赖 engram_step1 模块（统一错误码等），需先安装：
#   pip install -e apps/step1_logbook_postgres/scripts
#
# 安装方式:
#   pip install .           # 生产环境安装
#   pip install -e .        # 开发环境可编辑安装
#   pip install -e ".[dev]" # 开发环境（含测试依赖）
#
# 启动命令:
#   python -m uvicorn gateway.main:app --host 0.0.0.0 --port 8787
#   python -m gateway.main
#
# Docker 环境（已包含所有依赖）:
#   docker compose -f docker-compose.unified.yml up gateway
#
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-gateway"
version = "0.1.0"
description = "Memory Gateway - MCP Server for OpenMemory with governance and audit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# 运行时依赖（对齐 requirements.runtime.txt）
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# 开发/测试依赖
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.28.0",
]

[project.scripts]
# 命令行入口（可选，推荐使用 uvicorn 启动）
engram-gateway = "gateway.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway", "gateway.*"]

[tool.setuptools.package-data]
gateway = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# JUnit XML 输出（CI 环境可通过 --junitxml 覆盖）
addopts = "--durations=20"
